--- a/Odev1/urunler.html
+++ b/Odev1/urunler.html
@@ -26,32 +26,32 @@
     <center class="urun-alani">
         <p class="hover"> Kramer Baretta Special Elektro Gitar (Candy Blue) <br>
             <strong> Fiyat :</strong> 4,536.25 TL <br> <br>
-            <img src="img/kramer-baretta-special-elektro-gitar-candy-blue.jpg" alt="gitar1"  ><br>
+            <img src="https://www.do-re.com.tr/kramer-baretta-special-elektro-gitar-candy-blue-cd24719abe95cf6506d7b735e0b02fa3-29513305fef4a285c139dc6cd02350cb-large-pp.jpg" alt="gitar1"  ><br>
             <button><a href="https://www.do-re.com.tr/kramer-baretta-special-elektro-gitar-candy-blue" target="_blank"> Satın Al </a></button>
         </p>
         <p class="hover"> Kramer Nite-V Floyd Rose Elektro Gitar (Siyah)<br>
             <strong> Fiyat :</strong> 9,071.55 TL <br> <br>
-            <img src="img/kramer-nite-v-floyd-rose-elektro-gitar-siyah.jpg" alt="gitar2"><br>
+            <img src="https://www.do-re.com.tr/kramer-nite-v-floyd-rose-elektro-gitar-siyah-6947a02cc987b09816dd1e64eaf28ec6-e787659041031acf50a8f57272281378-large-pp.jpg" alt="gitar2"><br>
             <button><a href="https://www.do-re.com.tr/kramer-nite-v-floyd-rose-elektro-gitar-siyah" target="_blank"> Satın Al </a></button>
         </p>
         <p class="hover"> Gretsch Renown 5 Parça Akustik Davul (Gloss Antique Blue Burst) <br>
             <strong> Fiyat :</strong> 43,125.23 TL <br> <br>
-            <img src="img/gretsch-renown-5-parca-akustik-davul-gloss-antique-blue-burst.jpg" alt="davul1"  ><br>
+            <img src="https://www.do-re.com.tr/gretsch-renown-5-parca-akustik-davul-gloss-antique-blue-burst-304eefe1db5092053828c7b3ab0a3028-8e5293dae54c14efbf0e37f5161c7db9-large-pp.jpg" alt="davul1"  ><br>
             <button><a href="https://www.do-re.com.tr/gretsch-renown-5parca-akustik-davul-gloss-antique-blue-burst" target="_blank"> Satın Al </a></button>
         </p>
         <p class="hover"> Yamaha DTX6K-X Electronik Davul Seti <br>
             <strong> Fiyat :</strong> 29,953.00 TL <br> <br>
-            <img src="img/yamaha-dtx6k-x-electronik-davul-seti.jpg" alt="davul2"><br>
+            <img src="https://www.do-re.com.tr/yamaha-dtx6k-x-electronik-davul-seti-393c511e4bad50606db3fc5cbff4c749-1b612dcc53851006e12a2bc848b1c927-large-pp.jpg" alt="davul2"><br>
             <button><a href="https://www.do-re.com.tr/yamaha-dtx6k-x-electronik-davul-seti" target="_blank"> Satın Al </a></button>
         </p>
         <p class="hover"> Fenix FV44 Keman (4/4) <br>
             <strong> Fiyat :</strong> 2,165.05 TL<br> <br>
-            <img src="img/fenix-fv44-keman.jpg" alt="keman" ><br>
+            <img src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="keman" ><br>
             <button><a href="https://www.do-re.com.tr/fenix-fv44-keman-4-4" target="_blank"> Satın Al </a></button>
         </p>
         <p class="hover"> Yamaha GC1TAPE TransAcoustic Grand Piyano (Parlak Siyah)<br>
             <strong> Fiyat :</strong> 604,045.00 TL<br> <br>
-            <img src="img/yamaha-gc1tape-transacoustic-grand-piyano-parlak-siyah.jpg" alt="Piyano"  ><br>
+            <img src="https://www.do-re.com.tr/yamaha-gc1tape-transacoustic-grand-piyano-parlak-siyah-0a8caef378227f023b148d298b6a6bcf-9a4ec73e2285d060efccaeee6ea98d93-large-pp.jpg" alt="Piyano"  ><br>
             <button><a href="https://www.do-re.com.tr/yamaha-gc1tape-transacoustic-grand-piyano-parlak-siyah" target="_blank"> Satın Al </a></button>
         </p>
         
